[gd_scene load_steps=24 format=3 uid="uid://crabbyen"]

[ext_resource type="Script" path="res://scripts/enemies/crabby.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 01.png" id="2"]
[ext_resource type="Texture2D" path="res://assets/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 03.png" id="3"]
[ext_resource type="Texture2D" path="res://assets/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 05.png" id="4"]
[ext_resource type="Texture2D" path="res://assets/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 07.png" id="5"]
[ext_resource type="Texture2D" path="res://assets/The Crusty Crew/Sprites/Crabby/02-Run/Run 01.png" id="6"]
[ext_resource type="Texture2D" path="res://assets/The Crusty Crew/Sprites/Crabby/02-Run/Run 02.png" id="7"]
[ext_resource type="Texture2D" path="res://assets/The Crusty Crew/Sprites/Crabby/02-Run/Run 03.png" id="8"]
[ext_resource type="Texture2D" path="res://assets/The Crusty Crew/Sprites/Crabby/02-Run/Run 04.png" id="9"]
[ext_resource type="Texture2D" path="res://assets/The Crusty Crew/Sprites/Crabby/02-Run/Run 05.png" id="10"]
[ext_resource type="Texture2D" path="res://assets/The Crusty Crew/Sprites/Crabby/02-Run/Run 06.png" id="11"]
[ext_resource type="Texture2D" path="res://assets/The Crusty Crew/Sprites/Crabby/07-Attack/Attack 01.png" id="12"]
[ext_resource type="Texture2D" path="res://assets/The Crusty Crew/Sprites/Crabby/07-Attack/Attack 02.png" id="13"]
[ext_resource type="Texture2D" path="res://assets/The Crusty Crew/Sprites/Crabby/07-Attack/Attack 03.png" id="14"]
[ext_resource type="Texture2D" path="res://assets/The Crusty Crew/Sprites/Crabby/07-Attack/Attack 04.png" id="15"]
[ext_resource type="Texture2D" path="res://assets/The Crusty Crew/Sprites/Crabby/08-Hit/Hit 01.png" id="16"]
[ext_resource type="Texture2D" path="res://assets/The Crusty Crew/Sprites/Crabby/08-Hit/Hit 02.png" id="17"]
[ext_resource type="Texture2D" path="res://assets/The Crusty Crew/Sprites/Crabby/08-Hit/Hit 03.png" id="18"]
[ext_resource type="Texture2D" path="res://assets/The Crusty Crew/Sprites/Crabby/08-Hit/Hit 04.png" id="19"]
[ext_resource type="Texture2D" path="res://assets/The Crusty Crew/Sprites/Crabby/09-Dead Hit/Dead Hit 01.png" id="20"]
[ext_resource type="Texture2D" path="res://assets/The Crusty Crew/Sprites/Crabby/09-Dead Hit/Dead Hit 02.png" id="21"]
[ext_resource type="Texture2D" path="res://assets/The Crusty Crew/Sprites/Crabby/09-Dead Hit/Dead Hit 03.png" id="22"]
[ext_resource type="Texture2D" path="res://assets/The Crusty Crew/Sprites/Crabby/09-Dead Hit/Dead Hit 04.png" id="23"]

[sub_resource type="SpriteFrames" id="SpriteFrames_crabby"]
animations = [{"frames": [{"duration": 1.0, "texture": ExtResource("2")}, {"duration": 1.0, "texture": ExtResource("3")}, {"duration": 1.0, "texture": ExtResource("4")}, {"duration": 1.0, "texture": ExtResource("5")}], "loop": true, "name": &"idle", "speed": 6.0}, {"frames": [{"duration": 1.0, "texture": ExtResource("6")}, {"duration": 1.0, "texture": ExtResource("7")}, {"duration": 1.0, "texture": ExtResource("8")}, {"duration": 1.0, "texture": ExtResource("9")}, {"duration": 1.0, "texture": ExtResource("10")}, {"duration": 1.0, "texture": ExtResource("11")}], "loop": true, "name": &"run", "speed": 12.0}, {"frames": [{"duration": 1.0, "texture": ExtResource("12")}, {"duration": 1.0, "texture": ExtResource("13")}, {"duration": 1.0, "texture": ExtResource("14")}, {"duration": 1.0, "texture": ExtResource("15")}], "loop": false, "name": &"attack", "speed": 12.0}, {"frames": [{"duration": 1.0, "texture": ExtResource("16")}, {"duration": 1.0, "texture": ExtResource("17")}, {"duration": 1.0, "texture": ExtResource("18")}, {"duration": 1.0, "texture": ExtResource("19")}], "loop": false, "name": &"hit", "speed": 12.0}, {"frames": [{"duration": 1.0, "texture": ExtResource("20")}, {"duration": 1.0, "texture": ExtResource("21")}, {"duration": 1.0, "texture": ExtResource("22")}, {"duration": 1.0, "texture": ExtResource("23")}], "loop": false, "name": &"death", "speed": 10.0}]

[sub_resource type="RectangleShape2D" id="CollisionShape2D_body"]
extents = Vector2(12, 10)

[sub_resource type="RectangleShape2D" id="CollisionShape2D_attack"]
extents = Vector2(18, 8)

[node name="Crabby" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1")
collision_layer = 1
collision_mask = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_crabby")
animation = &"run"
autoplay = "run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CollisionShape2D_body")

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(16, -2)
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CollisionShape2D_attack")

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 1.0
one_shot = true

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
